gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erpnext
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: erpnext
  template:
    metadata:
      labels:
        app: erpnext
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: erpnext
          image: ghcr.io/nyeinpyaesone-ui/erp03/erpnext-custom:IMAGE_TAG
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/method/frappe.client.get_count
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/method/ping
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
